[package]
name = "filefix"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
inquire = "0.7"
walkdir = "2.4"
indicatif = "0.17"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
dirs = "5.0"
crossterm = "0.27"
ratatui = "0.26"
rayon = "1.10"
log = "0.4"
env_logger = "0.11"
anyhow = "1"